--- a/SalesWebMVC/Views/Sellers/Index.cshtml
+++ b/SalesWebMVC/Views/Sellers/Index.cshtml
@@ -22,6 +22,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.BaseSalary)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Department)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -40,6 +43,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.BaseSalary)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Department.Name)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
